# MuseumGame

./: Assets.cpp  Assets.h  BattleManager.cpp  BattleManager.h  CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  Launcher.cpp  Map.cpp  Map.h  MapReader.cpp  MapReader.h  README.md  TitleScreen.cpp  TitleScreen.h
Battles/: AGothicBattle.cpp  AGothicBattle.h  AGothicKnight.cpp  AGothicKnight.h  AppleBattle.cpp  AppleBattle.h  EarGirlBattle.cpp  EarGirlBattle.h  FarmManBattle.cpp  FarmManBattle.h  GeorgeBattle.cpp  GeorgeBattle.h  MonaBattle.cpp  MonaBattle.h  PipeBattle.cpp  PipeBattle.h  ScreamBattle.cpp  ScreamBattle.h  StarryBattle.cpp  StarryBattle.h  WaveBattle.cpp  WaveBattle.h
res/: map.mp  map_2.mp
res/maps/: map.mp  map1_web.mp  map_2.mp
res/sounds/: A_Cruel_Angels_Thesis_For_Brass_And_Percussion.mscz  A_cruel_angels_thesis_-_Evangelion_English.mscz  Gangstas_Paradise_for_Saxophone_Sextet_-_Coolio_ft._L.V..mscz  Perry_the_Platypus_Theme.mscz  Updated_A_Cruel_Angels_Thesis_For_selected_symphonic_band_instruments.mscz  score_8461690_93dd1e9053e77158c205abb74eea2e3923f54893.mscz
